--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "formdata",
   "version": "1.0.0",
-  "description": "",
+  "description": "Just a web API for Ray-Yuan to play.",
   "main": "index.js",
   "scripts": {
+	"start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Yuer Lee",
+  "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
